<resources>
    <string name="app_name">Factory Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bt_auto_test">Auto Test</string>
    <string name="bt_manual_test">Single Test</string>
    <string name="bt_test_report">Test Report</string>
    <string name="bt_reboot">Factory Reset</string>
    <string name="title_activity_manual_test">Single Test</string>
    <string name="bt_pass">PASS</string>
    <string name="bt_fail">FAIL</string>
    <string name="item_key">Key</string>
    <string name="item_motor">Motor</string>
    <string name="item_TouchPanel">Touch Panel</string>
    <string name="item_LCD">LCD Test</string>
    <string name="item_GssorGyroCal">Acceleration Calibration</string>
    <string name="item_Flash">Flash Light</string>
    <string name="item_VersionInfo">Version\n/Charging Info</string>
    <string name="item_BatteryInfo">BatteryInfo</string>
    <string name="item_Loudspeaker">Loudspeaker</string>
    <string name="item_Mic">MIC AudioLoop</string>
    <string name="item_Ringtone">Ringtone</string>
    <string name="item_GSersor">Acceleration Sensor</string>
    <string name="item_MSersor">MSensor</string>
    <string name="item_LSersor">LSensor</string>
    <string name="item_PSersor">PSensor</string>
    <string name="item_SensorShow">Sensor</string>
    <string name="item_FM">FM</string>
    <string name="item_NFC">NFC</string>
    <string name="item_BackCamera">BackCamera</string>
    <string name="item_FrontCamera">FrontCamera</string>
    <string name="item_Headset">Headset</string>
    <string name="item_hall_switch">Holzer switch</string>
    <string name="item_lcdbacklight">Backlight</string>
    <string name="item_ledkeypad">LED</string>
    <string name="item_wifibtgps">BT\n/WIFI/GPS</string>
    <string name="wifibtgps">BT/WIFI/GPS</string>
    <string name="lcd_tips">Does it show RGB?</string>
    <string name="dlg_noantenna_text">You need to use headphones to act as an antenna, please insert the headset.</string>
    <string name="dlg_noantenna_title">insert the headset</string>
    <string name="btn_yes">YES</string>
    <string name="btn_no">Confirm</string>
    <string name="default_station_name">New Channel</string>
    <string name="openDevice_success">Open FM device success!\n\t\t\tPlaying...</string>
    <string name="openDevice_fail">Failed to open the FM device!</string>
    <string name="fmIsOpening">opening the FM device...</string>
    <string name="nfc_inTesting">Testing..</string>
    <string name="nfc_testfinish">Test end!</string>
    <string name="fm_unit">MHz</string>
    <string name="tv_gsgyrocal_title">Calibration Acceleration/Gyroscope</string>
    <string name="tv_gsgyrocal_info">Please put your mobile phone in a horizontal table.</string>
    <string name="bt_gsgyrocal_start">Calibrate</string>
    <string name="tv_gsgyrocal_hint_gyro">2.Gyroscope calibration ( Success-Turn green )</string>
    <string name="tv_gsgyrocal_hint_gsensor">1.acceleration calibration ( Success - Turn green )</string>
    <string name="tv_use_sensor_info">If there is no corresponding sensor on the current phone, please cancel the corresponding sensor, to avoid affecting the test!</string>
    <string name="cal_status_un">Not calibrated</string>
    <string name="cal_status_ing">Calibrating...</string>
    <string name="cal_status_success">Calibration Success!</string>
    <string name="cal_status_fail">Calibration Failure!</string>
    <string name="tv_gssor_not_available">Not Support!</string>
    <string name="tv_gyro_not_available">Not Support!</string>
    <string name="tv_mssor_not_available">Not Support!</string>
    <string name="tv_lssor_not_available">Not Support!</string>
    <string name="tv_pssor_not_available">Not Support!</string>
    <string name="tv_use_gyroscope">Gyroscope</string>
    <string name="tv_use_gsensor">Acceleration Sensor</string>
    <string name="tv_gssor">Acceleration Sensor：</string>
    <string name="tv_gssor1">(Please keep the phone vertically or horizontally each revolution.)</string>
    <string name="tv_gryo">Gyroscope:</string>
    <string name="tv_mssor">Magnetic Field Sensor:</string>
    <string name="tv_lssor">Light Sensor:</string>
    <string name="tv_lssor1">(When the hand is blocking device light, the screen color is green.)</string>
    <string name="tv_pssor">Range sensor:</string>
    <string name="tv_pssor1">(When the hand is closing to the device, the screen color is blue.)</string>
    <string name="toast_cal_success">Calibration Success!</string>
    <string name="toast_cal_failed">Calibration Failure!</string>
    <string name="cal_gyro_start">Gyroscope:</string>
    <string name="cal_gssor_start">Acceleration Sensor:</string>
    <string name="tv_sensor_is_change">(Check the X/Y/Z has\n constantly changing its value)</string>
    <string name="report_title">Test Report</string>
    <string name="report_pass_item">Correct Item</string>
    <string name="report_fail_item">Error Item</string>
    <string name="report_uncheck_item">Not Detected</string>
    <string name="report_no_item">NO</string>
    <string name="btn_clear_state">Clear Data</string>
    <string name="auto_test_finish">Automatic Test Finish!</string>
    <string name="touch_panel_test_success">Touch Screen Test Finish!</string>
    <string name="tp_test_pass_hint">Pass!Tap the screen.</string>
    <string name="Version">Version Information</string>
    <string name="Battery">Charge State</string>
    <string name="sw_ver_">SW Ver</string>
    <string name="barcode_">BarCode</string>
    <string name="imei1_">IMEI1</string>
    <string name="imie2_">IMEI2</string>
    <string name="bt_addr_">BT ADDR</string>
    <string name="wifi_mac_">WIFI MAC</string>
    <string name="bulidtime_">BulidTime</string>
    <string name="_batteryCharging">Charge Green</string>
    <string name="_chargingVoltage">Battery Voltage:</string>
    <string name="_chargingCurrent">Charge Current</string>
    <string name="_batteryCurrent">Battery Current:</string>
    <string name="chargingVol">Charge Voltage</string>
    <string name="discharging">Discharging</string>
    <string name="chargingUSB">Charging(USB)</string>
    <string name="chargingAC">Charging(AC)</string>
    <string name="plug_charged">Please insert charger test charge.</string>
    <string name="_headset_listen">When you inserted the headset,you should hear the sound from the headset instead of loudspeaker.</string>
	<string name="_inHeadset">2.Insert Headset</string>
    <string name="_headset_loud">Is loud sound nomal?</string>
    <string name="_isNorml">Check the sound has come from the loudspeaker when the headset has not inserted.</string>
    <string name="_isNoVould"></string>
    <string name="_loud_Music">1.Loudspeaker Test</string>
    <string name="ishassound">Please judge that the headset and the outside is normal.</string>
    <string name="isloudspeakernomal">After playing outside the normal,\nplease insert the headset to continue testing.</string>
    <string name="isloudnomal">Please put the normal, and then insert the headset test.</string>
    <string name="headset_connected">Inserted</string>
    <string name="headset_unconnected">Not inserted</string>
    <string name="music_file_no_exits">The specified music file does not exist in the SD card root directory</string>
    <string name="SDcard_no_exits">The music file does not exist with the SD card, playing the preset songs</string>
    <string name="string_error_report">Error Report</string>
    <string name="string_can_not_copy">Could not copy</string>
    <string name="play_music">Music:</string>
    <string name="play_music_path">T Card: testsong</string>
    <string name="play_music_exits">(existed?)</string>
    <string name="exits">Existed!</string>
    <string name="no_exits">Not existed!</string>
    <string name="file_no_exits">Not Exist</string>
    <string name="_second_mic">Sub MIC</string>
    <string name="_close">(Not supported)</string>
    <string name="_open">(opened)</string>
    <string name="_main_second">Vice principal</string>
    <string name="judge_loudspeaker">After insertion of headphones, please judge:</string>
    <string name="_mic_main">Main MIC</string>
    <string name="_headset_mic_juge">(Blow into the headset MIC and check you can hear voice from the headset receiver)</string>
    <string name="hear_From_ringtone">Please listen to the sound from the receiver.</string>
    <string name="test_headset">Please start the test, the headset blowing.</string>
    <string name="mic_test_tip">(Please click on the button to start testing.)</string>
    <string name="insert_the_headset">Please insert the headset, and then test!</string>
    <string name="out_the_headset">Please pull out the headphones, and then test!</string>
	<string name="ringtone_test_tip">(Check the sound has come from receiver!)</string>
    <string name="tip">Prompt</string>
    <string name="tip_ok">Confirm</string>
    <string name="tvrefmictest">Sub wheat test</string>
    <string name="refmic">Deputy wheat</string>
    <string name="themainMICtest">Main wheat test</string>
    <string name="MAIN_Please_speaking">Please speak to the lord.</string>
    <string name="Stop_talking_and_playing">Stop and play the recording.</string>
	<string name="playing_over">Playback end.</string>
	<string name="Stop_playing">Stop playing</string>
	<string name="Start_playing">Play recording</string>
	<string name="Start_recording">Start recording</string>
    <string name="headset">Headphone Detection</string>
    <string name="_ununited">Not Inserted</string>
    <string name="_speakToHeadsetMic">2.Headphones blow:</string>
    <string name="_pressHeadset">3.Headset button(green):</string>
    <string name="headsetstate">1.Headset Inserted:</string>
    <string name="head_tip">Please insert the headset for testing!</string>
    <string name="_headin">Not Inserted</string>
    <string name="inside_Headset">Please insert the headset for testing.</string>
    <string name="press_key_no"> Not Press</string>
    <string name="press_key_yes">Press</string>
    <string name="_mainCamera_TAG">Main:Camera logo</string>
    <string name="_secondCamera_TAG">Sub:Camera logo</string>
    <string name="_flash_TAG">Flash Mark</string>
    <string name="checkCamera">Device does not support camera function</string>
    <string name="changeCamera">Click the button to switch around camera!</string>
    <string name="Flashfinished">Flash Finish</string>
    <string name="Mainpicturessuccess">Main Camera:Photo Finished</string>
    <string name="Mainpicturesfailure">Main Camera:Photo Failure</string>
    <string name="SUBpicturessuccess">Sub Camera:Preview Finished</string>
    <string name="SUBpicturesfailure">Sub Camera:Preview Failured</string>
    <string name="back_camera">1.Back Camera:</string>
    <string name="front_camera">2.Front Camera:</string>
    <string name="open_tag">Open</string>
    <string name="takepicture_tag">Not carried out</string>
    <string name="Main">Main</string>
    <string name="SUB">Sub</string>
    <string name="fenge">：</string>
    <string name="mtvpostime">Position Time:</string>
	<string name="noTest">Not Tested</string>
    <string name="headsetout_tip">Please pull out the headphones and then test!</string>
	<string name="battery_status">Battery State</string>
	<string name="battery_levels">Battery Power</string>
	<string name="battery_range">Battery Scale</string>
	<string name="battery_runstatus">Battery health</string>
	<string name="battery_voltage">Battery Voltage</string>
	<string name="battery_temp">Battery Temperature</string>
	<string name="battery_tech">Battery Technology</string>
	<string name="battery_time">Time since boot</string>
    <string name="mtvgpstitle">GPS Test</string>
    <string name="mtvgpsname">GPS</string>
</resources>