<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/floralwhite" 
    android:orientation="vertical">
<!-- //chb modify for VFOZ-5:2015-7-28 begin -->
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
       <TextView 
         android:id="@+id/mic_tingtong"
         android:text="@string/item_Ringtone"
         android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/TextTitle"
         android:layout_centerInParent="true"
         android:layout_alignParentTop="true"
         android:gravity="center"
         android:paddingBottom="4dp"/>
    </RelativeLayout>
    
        <TextView
          android:id="@+id/headsetout_tip"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="20dp"
          android:text="@string/headsetout_tip" 
          android:visibility="invisible"
          android:textColor="@color/red"
          style="@style/textTip"/>
   
      <TextView
          style="@style/textStyle_20"
          android:layout_width="match_parent"
          android:layout_height="80dp"
          android:layout_marginTop="120dp"
          android:gravity="center"
          android:textColor="@color/red"
          android:layout_gravity="center"
          android:text="@string/ringtone_test_tip" />
          
   
</LinearLayout>
